site/assets/stylesheets/style.scss
/* ============NORMAL PAGE STYLES DURING PREVIEW =================*/

/* Dashboard */

.dashboard-container {
	position: relative;
	width: 0px;
	height: 100vh;
	float: left;

	-webkit-transition: all 1s ease;
			transition: all 1s ease;

    .dashboard-main{
  		position: fixed;
  		z-index: 100;
    	top: 0;
	    background: #fff;
	    width: 300px;
	    height: 100%;
	    padding: 20px;
	    border-right: 1px solid #ddd;

	    -webkit-transform: translateX(-100%);
				transform: translateX(-100%);

	    -webkit-transition: all 1s ease;
	    		transition: all 1s ease;

    	.component-inputs{
			margin: 30px 0px;

			.component-input{
				margin: 10px 0px;
			}
		}

		.text{
			textarea{
				height: 300px;
			}
		}

		.btn-down{
			position: absolute;
	    	bottom: 0;
	    	margin-bottom: 20px;
	    	width: 100px;
		}

		.btn-down.preview{
			font-size: 48px;
			width: 200px;
		}
    }

    .dashboard-sub{
    	position: fixed;
	    top: 0%;
	    z-index: 99;
		height: 100%; 

	    -webkit-transition: all 0.5s ease;
				transition: all 0.5s ease;

		button{
			font-size: 24px;
			color: #fff;
	    	margin: 0;
	    	letter-spacing: 3px;
	    	background: #000;
	    	border: none;
	    	padding: 10px;
	    	padding-left: 20px;

	    	-webkit-transition: translateX(-10px);
	    			transform: translateX(-10px);

	    	-webkit-transition: transform 0.5s ease;
					transition: transform 0.5s ease;
		}
    }

    .dashboard-sub:hover{
		cursor: pointer;
		
		button{
			-webkit-transform: translateX(0);
					transform: translateX(0);
		}
	}

	.btn-generate{
		position: fixed;
		z-index: 100;
	    right: 0;
	    top: 0;
	    margin: 20px;
	}
}

/* Main Page*/

$header_font_family: Verdana;
$subhead_font_family: Verdana;
$body_text_font_family: Arial, sans-serif;
$container_margin: 10%;

.page-container {
	font-family: Verdana;
	position: relative;

    float: right;
    width: 100%;

    -webkit-transition: all 1s ease;
    		transition: all 1s ease;

    .sortable-element{
    	height: auto;
    }
	.component-container {
		position: relative;
		.component-action-btn-group {
			visibility: hidden;
			position: absolute;
			left: 5px;
			top: 5px;
		}
	}
}


// COMPONENT STYLES
.header {
	color: #fff;
	position: relative;
	
	.headerDetails {
		padding: 30px;
	    position: absolute;
	    z-index: 2;
	    top: 100%;
	    left: 40%;
	    min-height: 200px;
	    min-width: 400px;

	    -webkit-transform: translate(-50%, -110%);
	    		transform: translate(-50%, -110%);
	}
	.title {
		font-size: 48px;
		font-family: $header_font_family;
	}

	@media all and (max-width: 550px) {
	    .headerDetails {
			left: 60%;
			right: 30%;
			min-width: 500px;
	    }
	    .title {
	    	font-size: 36px;
	    }
	}
	.author {
		font-size: 20px;
		font-family: $subhead_font_family;
	}
	.coverImage {
		background: no-repeat center center fixed; 
		background-size: cover;
		padding: 0;
		height: 700px;
		min-height: 500px;
		width: 100%;
	}
	.dark-gradient{
		height: 300px;
		width: 100%;
		position: absolute;
		z-index: 1;
		bottom: 0;
		background: -webkit-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)); 
		background: -o-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)); 
		background: -moz-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8));
		background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8));
	}
}
.text {
	font-family: $body_text_font_family;
}
.subhead {
	font-size: 32px;
	font-weight: bolder;
	font-family: $subhead_font_family;
}
.quote-block{
	overflow: auto;
	padding: 50px;
	.quote-content{
		float: left;
		width: 100%;
		.quote-text{
			font-size: 1.5em;
			font-weight: 600;
			font-style: oblique;
		}
		.quote-source {
			font-size: 0.9em;
			font-weight: 400;
			color: grey;
			letter-spacing: 0.5px;
		}
	}
	.quote{
		float: left;
		font-family: 'Helvetica';
		font-size: 200px;
		color: #000;
	}
	.quote-left{
		line-height: 200px;
		height: 100px;
		overflow: hidden;
		margin-left: -5px;
	}
	.quote-right{
		float: left;
		margin-top: -100px;
	}
}
.quoteSource {
	font-size: 0.9em;
	font-weight: 400;
	color: grey;
	letter-spacing: 0.5px;
}
.image {
	.img-block {
		position: relative;
		height: 400px;
		background-repeat: no-repeat;
		background-size: cover;
		.img-credit {
			background-color: rgba(255,255,255,0.5);
			vertical-align: middle;
		}
	}
	.img-caption {
		vertical-align: middle;
	}
}

.sortable-element{
	position: relative;

	.component-action-btn-group{
		visibility: visible;
	}
}
// END COMPONENT STYLES

/*==========DASHBOARD / PAGE WHEN EDITING=========*/

.app-container.editing{
	.dashboard-container{
		width: 300px;
		.dashboard-main{
			-webkit-transform: translateX(0);
					transform: translateX(0);
		}

		.dashboard-sub{
			button{
				font-size: 24px;
				color: #fff;
	    		margin: 0;
	    		letter-spacing: 3px;
	    		background: #000;
	    		border: none;
	    		padding: 10px;
	    		padding-left: 20px;

	    		-webkit-transition: translateX(-10px);
	    				transform: translateX(-10px);

	    		-webkit-transition: transform 0.5s ease;
						transition: transform 0.5s ease;
			}
	    }
	}
	
	.page-container{
		
		width: -webkit-calc(100% - 300px);
	    width:    -moz-calc(100% - 300px);
	    width: 	   	   calc(100% - 300px);

		.sortable-element{
			position: relative;
	    	max-height: 350px;
	    	overflow: hidden;
	    	border-bottom: 1px solid #ddd;

	    	.component-action-btn-group{
	    		visibility: visible;
	    	}
		}
		
	}
}

/* ==================GLOBAL STYLES================*/
.center-block {
	padding: 0 $container_margin 0 $container_margin;
}

/* /all STYLES */
.all_pages {
	font-family: Verdana;
	margin: 20px 20px;
	.coverImage {
		margin: 15px 0 0 15px;
		width: 85%;
		height: 100px;
	}
	.row{
		padding-top: 10px;
	}
}

